--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 <header>
   <div class="logo">DIGITAL UNITY</div>
   <nav>
-    <a href="#">Company</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
+    <a href="company.html">Company</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
 
